--- a/SomeChess/Pages/PlayOnlinePage.razor
+++ b/SomeChess/Pages/PlayOnlinePage.razor
@@ -1,5 +1,6 @@
 ﻿@page "/Chess/{SomeVariable}"
 @using SomeChess.Components
+@using SomeChess.Code
 
 <body style="background-color: var(--BackgroundColor);">
 
@@ -10,4 +11,19 @@
 @code {
     [Parameter]
     public string SomeVariable { get; set; }
+
+    protected override Task OnAfterRenderAsync(bool firstRender)
+    {
+        Console.Clear();
+        try
+        {
+            Console.WriteLine(String.Concat(Enumerable.Repeat(" ", (Console.WindowWidth / 2) - 5)) + "Chess" + String.Concat(Enumerable.Repeat(" ", (Console.WindowWidth / 2) - 5)));
+        }
+        catch
+        {
+            Console.WriteLine("      Chess      ");
+        }
+        LoggingHandler.DrawSeperatorLine(ConsoleColor.Gray);
+        return base.OnAfterRenderAsync(firstRender);
+    }
 }
